website/docs/v6.5.2/en/guide/examples/skills.mdx
---
title: 'Skills & Custom Agents'
description: 'Load project skills and custom subagents from filesystem conventions.'
---

import { Tab, Tabs } from '@rspress/core/theme';

# Skills & Custom Agents

A3S Code does not ship default embedded skills. Load your own skills and
subagents from directories on disk. Use `skillDirs` for Markdown skills and
`agentDirs` for worker/subagent definitions. `registerAgentDir` can add more
agent definition directories after the session exists; skill directories are
loaded when the session is created.

<Tabs>
<Tab label="Rust">

```rust
use a3s_code_core::{Agent, SessionOptions};
use std::path::Path;

#[tokio::main]
async fn main() -> a3s_code_core::Result<()> {
    let agent = Agent::new("agent.acl").await?;
    let session = agent
        .session_builder("/path/to/project")
        .options(
            SessionOptions::new()
                .with_skill_dirs(["./.a3s/skills"])
                .with_agent_dir("./.a3s/agents"),
        )
        .build()
        .await?;

    session.register_agent_dir(Path::new("./team/shared-agents"))?;
    println!("Tools: {:?}", session.tool_names());
    println!("Skills: {:?}", session.skill_names());

    let result = session
        .send(
            "Use the project conventions skill to scaffold a new module.",
            None,
        )
        .await?;
    println!("{}", result.text);

    session.close().await;
    agent.close().await;
    Ok(())
}
```

</Tab>
<Tab label="Node.js">

```ts
import { Agent } from '@a3s-lab/code';

const agent = await Agent.create('agent.acl');

// Add project skills and agents explicitly.
const session = agent.session('/path/to/project', {
  skillDirs: ['./.a3s/skills'],
  agentDirs: ['./.a3s/agents'],
});

// You can register more agent definition directories after the session exists.
session.registerAgentDir('./team/shared-agents');

// Inspect what the session loaded.
console.log('Tools:', session.toolNames());
console.log('Commands:', session.listCommands());

// The agent now has access to the project skills.
const result = await session.run(
  'Use the project conventions skill to scaffold a new module.',
);
console.log(result.text);

session.close();
```

</Tab>
<Tab label="Python">

```python
from a3s_code import Agent, SessionOptions

agent = Agent.create("agent.acl")

# Add project skills and agents explicitly.
opts = SessionOptions()
opts.skill_dirs = ['./.a3s/skills']
opts.agent_dirs = ['./.a3s/agents']

session = agent.session('/path/to/project', opts)

# You can register more agent definition directories after the session exists.
session.register_agent_dir('./team/shared-agents')

# Inspect what the session loaded.
print('Tools:', session.tool_names())
print('Commands:', session.list_commands())

# The agent now has access to the project skills.
result = session.run(
    'Use the project conventions skill to scaffold a new module.',
)
print(result.text)

session.close()
```

</Tab>
<Tab label="Go">

```go
package main

import (
	"context"
	"fmt"
	"log"

	code "github.com/A3S-Lab/Code/sdk/go/v6"
)

func main() {
	ctx := context.Background()
	agent, err := code.Create(ctx, "agent.acl")
	if err != nil {
		log.Fatal(err)
	}
	defer agent.Close(context.Background())
	session, err := agent.Session(ctx, "/path/to/project", &code.SessionOptions{
		SkillDirs: []string{"./.a3s/skills"},
		AgentDirs: []string{"./.a3s/agents"},
	})
	if err != nil {
		log.Fatal(err)
	}
	defer session.Close(context.Background())

	if _, err := session.RegisterAgentDir(ctx, "./team/shared-agents"); err != nil {
		log.Fatal(err)
	}
	tools, err := session.ToolNames(ctx)
	if err != nil {
		log.Fatal(err)
	}
	skills, err := session.SkillNames(ctx)
	if err != nil {
		log.Fatal(err)
	}
	fmt.Println("Tools:", tools)
	fmt.Println("Skills:", skills)

	result, err := session.Run(
		ctx,
		"Use the project conventions skill to scaffold a new module.",
	)
	if err != nil {
		log.Fatal(err)
	}
	fmt.Println(result.Text)
}
```

</Tab>
</Tabs>

## Skill Registry Behavior

The default effective skill registry contains no embedded skills.
`builtinSkills: true` / `builtin_skills = True` is accepted for compatibility,
but it currently adds nothing. Add skills with `skillDirs` / `skill_dirs`,
inline skills, or an explicit custom `SkillRegistry`.

For day-to-day projects, keep durable reusable behavior in `.a3s/skills` or a
configured skill directory.

Custom subagents loaded from `agentDirs` can be referenced by name in
[`session.parallel(...)`](/guide/examples/orchestration) and
[`session.pipeline(...)`](/guide/examples/orchestration) alongside the built-in
registry agents (`explore`, `plan`, `general`, `verification`, `review`).

A runnable version ships at `sdk/node/examples/skills/test_custom_skills_agents.ts`.
